# api-docs.json
@@ -1,1 +1,290 @@
-{"openapi":"3.0.1","info":{"title":"Atividade01 CRUD de Livros","license":{"name":"Apache License 2.0","url":"http://www.apache.org/licenses/LICENSE-2.0"},"version":"v1"},"servers":[{"url":"http://localhost:8080","description":"Generated server url"}],"paths":{"/api/v1/livro/alterar":{"put":{"tags":["livro-controller"],"description":"Método utilizado para altlerar os dados de um livro","operationId":"alterar","parameters":[],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/LivroAlteravelDTO"}}},"required":true},"responses":{"200":{"description":"Livro Alterado","content":{"application/json":{"schema":{"$ref":"#/components/schemas/LivroDTO"}}}}}}},"/api/v1/livro/incluir":{"post":{"tags":["livro-controller"],"description":"Método utilizado para realizar a inclusão de um livro","operationId":"incluir","requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/LivroAlteravelDTO"}}},"required":true},"responses":{"200":{"description":"Livro Incluído","content":{"application/json":{"schema":{"$ref":"#/components/schemas/LivroDTO"}}}}}}},"/api/v1/livro/deletar":{"post":{"tags":["livro-controller"],"description":"Método utilizado para deletar livro do banco de dados","operationId":"excluir","parameters":[],"requestBody":{"content":{"application/json":{"schema":{"$ref":"#/components/schemas/LivroDTO"}}},"required":true},"responses":{"200":{"description":"Livro Excluído","content":{"application/json":{"schema":{"$ref":"#/components/schemas/Livro"}}}}}}},"/api/v1/livro/listar":{"get":{"tags":["livro-controller"],"description":"Listagem Geral dos livros","operationId":"listAll","responses":{"400":{"description":"Nao encontrado","content":{"application/json":{}}},"200":{"description":"Listagem de livros","content":{"application/json":{}}}}}},"/api/v1/livro/buscar":{"get":{"tags":["livro-controller"],"description":"Buscar um livro pelo título","operationId":"buscar","parameters":[{"name":"l","in":"query","required":true,"schema":{"$ref":"#/components/schemas/LivroDTO"}}],"responses":{"200":{"description":"Livro encontrado","content":{"application/json":{"schema":{"$ref":"#/components/schemas/LivroDTO"}}}},"404":{"description":"Livro não encontrado","content":{"*/*":{"schema":{"$ref":"#/components/schemas/LivroDTO"}}}}}}}},"components":{"schemas":{"LivroAlteravelDTO":{"type":"object","properties":{"titulo":{"type":"string"},"autor":{"type":"string"},"anoPublicacao":{"type":"integer","format":"int32"},"editora":{"type":"string"},"genero":{"type":"string"},"numeroDePaginas":{"type":"integer","format":"int32"}}},"LivroDTO":{"type":"object","properties":{"idLivro":{"type":"integer","format":"int64"},"titulo":{"type":"string"},"autor":{"type":"string"},"anoPublicacao":{"type":"integer","format":"int32"},"editora":{"type":"string"},"genero":{"type":"string"},"numeroDePaginas":{"type":"integer","format":"int32"},"dataDeRegistro":{"type":"string","format":"date"}}},"Livro":{"type":"object","properties":{"idLivro":{"type":"integer","format":"int64"},"titulo":{"type":"string"},"autor":{"type":"string"},"anoPublicacao":{"type":"integer","format":"int32"},"editora":{"type":"string"},"genero":{"type":"string"},"numeroDePaginas":{"type":"integer","format":"int32"},"dataDeRegistro":{"type":"string","format":"date"}}}},"securitySchemes":{"basicScheme":{"type":"http","scheme":"basic"}}}}
+{
+  "openapi": "3.0.1",
+  "info": {
+    "title": "Atividade01 CRUD de Livros",
+    "license": {
+      "name": "Apache License 2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+    },
+    "version": "v1"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:8080",
+      "description": "Generated server url"
+    }
+  ],
+  "paths": {
+    "/api/v1/livro/alterar": {
+      "put": {
+        "tags": [
+          "livro-controller"
+        ],
+        "description": "Método utilizado para altlerar os dados de um livro",
+        "operationId": "alterar",
+        "parameters": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LivroAlteravelDTO"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Livro Alterado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LivroDTO"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/livro/incluir": {
+      "post": {
+        "tags": [
+          "livro-controller"
+        ],
+        "description": "Método utilizado para realizar a inclusão de um livro",
+        "operationId": "incluir",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LivroAlteravelDTO"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Livro Incluído",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LivroDTO"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/livro/deletar/{id}": {
+      "post": {
+        "tags": [
+          "livro-controller"
+        ],
+        "description": "Método utilizado para deletar livro do banco de dados",
+        "operationId": "excluir",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/LivroDTO"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Livro Excluído",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Livro"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/livro/listar": {
+      "get": {
+        "tags": [
+          "livro-controller"
+        ],
+        "description": "Listagem Geral dos livros",
+        "operationId": "listAll",
+        "responses": {
+          "200": {
+            "description": "Listagem de livros",
+            "content": {
+              "application/json": {}
+            }
+          },
+          "400": {
+            "description": "Nao encontrado",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/api/v1/livro/buscar/{id}": {
+      "get": {
+        "tags": [
+          "livro-controller"
+        ],
+        "description": "Buscar um livro pelo título",
+        "operationId": "buscar",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "404": {
+            "description": "Livro não encontrado",
+            "content": {
+              "*/*": {
+                "schema": {
+                  "$ref": "#/components/schemas/LivroDTO"
+                }
+              }
+            }
+          },
+          "200": {
+            "description": "Livro encontrado",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/LivroDTO"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "LivroAlteravelDTO": {
+        "type": "object",
+        "properties": {
+          "titulo": {
+            "type": "string"
+          },
+          "autor": {
+            "type": "string"
+          },
+          "anoPublicacao": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "editora": {
+            "type": "string"
+          },
+          "genero": {
+            "type": "string"
+          },
+          "numeroDePaginas": {
+            "type": "integer",
+            "format": "int32"
+          }
+        }
+      },
+      "LivroDTO": {
+        "type": "object",
+        "properties": {
+          "idLivro": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "titulo": {
+            "type": "string"
+          },
+          "autor": {
+            "type": "string"
+          },
+          "anoPublicacao": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "editora": {
+            "type": "string"
+          },
+          "genero": {
+            "type": "string"
+          },
+          "numeroDePaginas": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "dataDeRegistro": {
+            "type": "string",
+            "format": "date"
+          }
+        }
+      },
+      "Livro": {
+        "type": "object",
+        "properties": {
+          "idLivro": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "titulo": {
+            "type": "string"
+          },
+          "autor": {
+            "type": "string"
+          },
+          "anoPublicacao": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "editora": {
+            "type": "string"
+          },
+          "genero": {
+            "type": "string"
+          },
+          "numeroDePaginas": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "dataDeRegistro": {
+            "type": "string",
+            "format": "date"
+          }
+        }
+      }
+    },
+    "securitySchemes": {
+      "basicScheme": {
+        "type": "http",
+        "scheme": "basic"
+      }
+    }
+  }
+}
